Home page ready only problem with scrollbar needs to be solved

--- a/croprotation/src/index.css
+++ b/croprotation/src/index.css
@@ -28,11 +28,11 @@ html, body, #root {
   padding: 0;
   width: 100%;
   height: 100%;
-  background-color: #f9f9f9; /* Ανοιχτόχρωμο φόντο */
+  background-color: #f9f9f9; 
   background-image: repeating-linear-gradient(
     to right,
     #eaeaea 0px,
-    #eaeaea 1px,
+    #d0d0d0 1px,
     transparent 1px,
     transparent 10px
   );
@@ -47,26 +47,9 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-family: 'Playfair Display', serif;
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-h2 {
-  font-family: 'Playfair Display', serif;
-  font-size: 3.5em;
-  color: #233f36;
-}
-
-h3 {
-  font-family: 'Gloria Hallelujah', cursive;
-  font-size: 2.5em;
-  color: #ffffff;
-}
-
-h4 {
-  font-size: 1.5em;
+img {
+  width: 6em;
+  height: 6em;
 }
 
 button {
@@ -75,7 +58,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
+  font-family: 'Playfair Display', serif;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
